Updated status of stations when running state averages

--- a/graph_notebook.ipynb
+++ b/graph_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt_path = 'data/ghcnd-stations.txt'\n",
-    "path_2000= 'data/weather/2000.csv'"
+    "txt_path = 'data/weather/meta_data/ghcnd-stations.txt'\n",
+    "path_2000= 'data/weather/gz_files/2000.csv.gz'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -59,9 +59,13 @@
      "output_type": "stream",
      "text": [
       "AK\n",
+      "There are 221 stations in the state of AK\n",
       "TX\n",
+      "There are 694 stations in the state of TX\n",
       "WA\n",
-      "FL\n"
+      "There are 226 stations in the state of WA\n",
+      "FL\n",
+      "There are 143 stations in the state of FL\n"
      ]
     },
     {
@@ -101,13 +105,6 @@
     "    ax.legend()\n",
     "    ax2.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
