--- a/graph_notebook.ipynb
+++ b/graph_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ACW00011604</td>\n",
+       "      <td>17.1167</td>\n",
+       "      <td>-61.7833</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>ST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ACW00011647</td>\n",
+       "      <td>17.1333</td>\n",
+       "      <td>-61.7833</td>\n",
+       "      <td>19.2</td>\n",
+       "      <td>ST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AE000041196</td>\n",
+       "      <td>25.3330</td>\n",
+       "      <td>55.5170</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>SHARJAH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AEM00041194</td>\n",
+       "      <td>25.2550</td>\n",
+       "      <td>55.3640</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>DUBAI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AEM00041217</td>\n",
+       "      <td>24.4330</td>\n",
+       "      <td>54.6510</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>ABU</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    station_id  latitude  longitude  elevation    state\n",
+       "0  ACW00011604   17.1167   -61.7833       10.1       ST\n",
+       "1  ACW00011647   17.1333   -61.7833       19.2       ST\n",
+       "2  AE000041196   25.3330    55.5170       34.0  SHARJAH\n",
+       "3  AEM00041194   25.2550    55.3640       10.4    DUBAI\n",
+       "4  AEM00041217   24.4330    54.6510       26.8      ABU"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>measurement_date</th>\n",
+       "      <th>measurement_type</th>\n",
+       "      <th>measurement_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ASN00015643</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ASN00015643</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>PRCP</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ASN00085296</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ASN00085296</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>TMIN</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ASN00085296</td>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>PRCP</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    station_id measurement_date measurement_type  measurement_flag\n",
+       "0  ASN00015643       2000-01-01             TMAX               350\n",
+       "1  ASN00015643       2000-01-01             PRCP                 0\n",
+       "2  ASN00085296       2000-01-01             TMAX               141\n",
+       "3  ASN00085296       2000-01-01             TMIN                79\n",
+       "4  ASN00085296       2000-01-01             PRCP                10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,20 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AK\n",
+      "Processing: AK\n",
       "There are 221 stations in the state of AK\n",
-      "TX\n",
+      "Processing: TX\n",
       "There are 694 stations in the state of TX\n",
-      "WA\n",
+      "Processing: WA\n",
       "There are 226 stations in the state of WA\n",
-      "FL\n",
+      "Processing: FL\n",
       "There are 143 stations in the state of FL\n"
      ]
     },
@@ -82,7 +268,7 @@
    "source": [
     "fig, axs = plt.subplots(4,1,figsize=(30,30))\n",
     "for ax, state in zip(axs.flatten(),states):\n",
-    "    print(state)\n",
+    "    print(f'Processing: {state}')\n",
     "    graph_4_real=get_average_per_state(meta_data,weather_data, state)\n",
     "    julian_days = graph_4_real['julian'].values\n",
     "    precip = graph_4_real['PRCP'].values\n",
@@ -130,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
