--- a/sql_sandbox.ipynb
+++ b/sql_sandbox.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import psycopg2 as pg2\n",
-    "import time"
+    "import time\n",
+    "import src.sql_commands as sqlc"
    ]
   },
   {
