Added Markdowns in demo file

--- a/PlantForecast_demo.ipynb
+++ b/PlantForecast_demo.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Berzyy/anaconda/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-      "  \"\"\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.final_product import PlantForecast\n",
     "import src.cross_validation as cv\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -81,10 +72,10 @@
     {
      "data": {
       "text/plain": [
-       "<src.final_product.PlantForecast at 0x1059e6630>"
+       "<src.final_product.PlantForecast at 0x1a1429a240>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +91,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "idfinder is a dictionary where you can pass in a station code and get an array with [lat,long,elevation,state], so you don't get too lost ;)"
+    "## pf.idfinder['station_code'] \n",
+    "-A handy dictionary tool where you can pass in a station code and get an array with [lat,long,elevation,state], so you don't get too lost ;)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.433, 54.651, 26.8, 'ABU'], dtype=object)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pf.idfinder['AEM00041217']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train/Test Split\n",
+    "You can change what years you want to train/test split on. "
    ]
   },
   {
@@ -348,17 +370,6 @@
     "lasso_pred=lasso.predict(X_test)\n",
     "lasso_score= lasso.score(X_test,y_test)\n",
     "lasso_mse = mean_squared_error(y_test, lasso_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "fill=datetime.date(2015, 1, 1)\n",
-    "second_fill=datetime.date(2010, 1, 1)"
    ]
   },
   {
