--- a/PlantForecast_demo.ipynb
+++ b/PlantForecast_demo.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "pf.load_weather(preloaded=True)\n",
     "\n",
-    "pf.merge_modis_weather()\n",
+    "pf.merge_modis_weather(longterm=365)\n",
     "```"
    ]
   },
