Cleaned up train/test split

--- a/bayes_model.ipynb
+++ b/bayes_model.ipynb
@@ -88,7 +88,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test= test_df[['PRCP','SNOW','SNOWD','TMAX','TMIN','LT_precip','LT_snow','LT_snowd', 'LT_tmax','LT_tmin','intercept']]\n",
+    "y_test = test_df[['NDVI']].values.reshape(-1,)"
+   ]
   }
  ],
  "metadata": {
