--- a/bayes_model.ipynb
+++ b/bayes_model.ipynb
@@ -30,12 +30,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pf = PlantForecast()"
+    "import sampyl as smp\n",
+    "from sampyl import np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf = PlantForecast()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,10 +59,10 @@
     {
      "data": {
       "text/plain": [
-       "<src.final_product.PlantForecast at 0x10451c0b8>"
+       "<src.final_product.PlantForecast at 0x10323e080>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +95,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_test= test_df[['PRCP','SNOW','SNOWD','TMAX','TMIN','LT_precip','LT_snow','LT_snowd', 'LT_tmax','LT_tmin','intercept']]\n",
     "y_test = test_df[['NDVI']].values.reshape(-1,)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of data points\n",
+    "N = 200\n",
+    "\n",
+    "# True parameters\n",
+    "sigma = 1\n",
+    "true_b = np.array([2, 1, 4])\n",
+    "\n",
+    "# Features, including a constant\n",
+    "X = np.ones((N, len(true_b)))\n",
+    "X[:,1:] = np.random.rand(N, len(true_b)-1)\n",
+    "\n",
+    "# Outcomes\n",
+    "y = np.dot(X, true_b) + np.random.randn(N)*sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sampyl as smp\n",
+    "from sampyl import np\n",
+    "\n",
+    "# Here, b is a length 3 array of coefficients\n",
+    "def logp(b, sig):\n",
+    "\n",
+    "    model = smp.Model()\n",
+    "\n",
+    "    # Predicted value\n",
+    "    y_hat = np.dot(X, b)\n",
+    "\n",
+    "    # Log-likelihood\n",
+    "    model.add(smp.normal(y, mu=y_hat, sig=sig))\n",
+    "\n",
+    "    # log-priors\n",
+    "    model.add(smp.exponential(sig),\n",
+    "              smp.normal(b, mu=0, sig=100))\n",
+    "\n",
+    "    return model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress: [##############################] 100 of 100 samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = smp.find_MAP(logp, {'b': np.ones(3), 'sig': 1.})\n",
+    "nuts = smp.NUTS(logp, start)\n",
+    "chain = nuts.sample(100, burn=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
