--- a/PlantForecast_demo.ipynb
+++ b/PlantForecast_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -70,10 +70,10 @@
     {
      "data": {
       "text/plain": [
-       "<src.final_product.PlantForecast at 0x10c1dd320>"
+       "<src.final_product.PlantForecast at 0x1031c7080>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
