working graphs, run all night

--- a/bayes_model.ipynb
+++ b/bayes_model.ipynb
@@ -350,9 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress: [##############################] 10 of 10 samples\n"
+     ]
+    }
+   ],
    "source": [
     "start = smp.find_MAP(logp, {'b': np.ones(11), 'sig': 1.})\n",
     "nuts = smp.NUTS(logp, start)\n",
